; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_csapcm.c_csa_wrcd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_csapcm.c_csa_wrcd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csa_info = type { i32 }

@BA0_AC97_RESET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32, i32)* @csa_wrcd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @csa_wrcd(i32 %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.csa_info*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.csa_info*
  store %struct.csa_info* %11, %struct.csa_info** %9, align 8
  %12 = load %struct.csa_info*, %struct.csa_info** %9, align 8
  %13 = call i32 @csa_active(%struct.csa_info* %12, i32 1)
  %14 = load %struct.csa_info*, %struct.csa_info** %9, align 8
  %15 = getelementptr inbounds %struct.csa_info, %struct.csa_info* %14, i32 0, i32 0
  %16 = load i32, i32* %7, align 4
  %17 = sext i32 %16 to i64
  %18 = load i64, i64* @BA0_AC97_RESET, align 8
  %19 = add nsw i64 %17, %18
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @csa_writecodec(i32* %15, i64 %19, i32 %20)
  %22 = load %struct.csa_info*, %struct.csa_info** %9, align 8
  %23 = call i32 @csa_active(%struct.csa_info* %22, i32 -1)
  ret i32 0
}

declare dso_local i32 @csa_active(%struct.csa_info*, i32) #1

declare dso_local i32 @csa_writecodec(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
